# MPPI_Paper_Example_Code

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
docker/: README.md  create_cuda_docker.py  docker-compose.yml  docker_bash.sh  docker_tags.sh  get_cuda_tags.sh  ros_cuda.dockerfile
docker/misc/: 10_nvidia.json  docker_bash-completion.bash
include/mppi_paper_example/: cartpole_plant.hpp
include/mppi_paper_example/controllers/CEM/: cem_controller.cu  cem_controller.cuh
include/mppi_paper_example/controllers/DMD-MPPI/: dmd_mppi_controller.cu  dmd_mppi_controller.cuh
include/mppi_paper_example/costs/AutorallyModifiedCost/: autorally_modified_cost.cu  autorally_modified_cost.cuh
include/mppi_paper_example/costs/ComparisonCost/: comparison_cost.cu  comparison_cost.cuh
include/mppi_paper_example/costs/diff_drive_cost/: diff_drive_cost.cu  diff_drive_cost.cuh
include/mppi_paper_example/dynamics/diff_drive/: diff_drive.cu  diff_drive.cuh
include/mppi_paper_example/plants/sim_plant/: sim_plant.hpp
scripts/: differential_drive_env.py  plot_autorally_sys_cost_complexity_results.py  plot_double_integrator.py  plot_optimization_times.py  plot_torchrl_results.py
src/: CMakeLists.txt  ROS2_MPPI.cpp  diff_drive_test.cu  minimal_example.cu  minimal_mpc_example.cu  templated_plant_mpc.cu
subtree/MPPI-Generic/cmake/: MPPIGenericToolsConfig.cmake
subtree/MPPI-Generic/include/mppi/core/: mppi_common.cu
subtree/MPPI-Generic/include/mppi/dynamics/bicycle_slip/: bicycle_slip_hybrid.cu  bicycle_slip_hybrid.cuh  bicycle_slip_kinematic.cu  bicycle_slip_kinematic.cuh
subtree/MPPI-Generic/include/mppi/dynamics/racer_dubins/: racer_dubins.cu
subtree/MPPI-Generic/resources/: ccrf_track.npz
test/: CMakeLists.txt  test_main.cpp
test/autorally/: CMakeLists.txt  mppi_autorally_comparisons.cu
test/autorally_sys/: CMakeLists.txt  autorally_system_cost_testing.cu  autorally_system_mppi-generic_comparisons.cu
test/include/test/: common.hpp  mppi_controller.cu  mppi_controller.cuh
test/mppi-generic/: differential_drive_cost_complexity_comparisons.cu  double_integrator_dmd_mppi_comparison.cu  mppi_mppi-generic_comparisons.cu
test/ros2/: CMakeLists.txt  mppi_ros2_comparisons.cpp
test/templated_headers/: autorally_system_testing.h.in
